[gd_scene load_steps=8 format=3 uid="uid://dupqr4gi3wba4"]

[ext_resource type="Texture2D" uid="uid://br4h16dalelpl" path="res://assets/fireball.png" id="1_3s14c"]
[ext_resource type="Script" path="res://scripts/fireball.gd" id="1_cb14k"]
[ext_resource type="Texture2D" uid="uid://db512wj36tjdf" path="res://assets/fireball_shadow.png" id="2_1gl40"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1gl40"]
atlas = ExtResource("1_3s14c")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cb14k"]
atlas = ExtResource("1_3s14c")
region = Rect2(128, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_7kba2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gl40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cb14k")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3s14c"]
radius = 52.1536

[node name="Fireball" type="Node2D"]
script = ExtResource("1_cb14k")

[node name="Shadow" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_1gl40")

[node name="Fireball" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_7kba2")
autoplay = "default"
frame_progress = 0.0615025

[node name="Area2D" type="Area2D" parent="Fireball"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fireball/Area2D"]
position = Vector2(0, 9)
shape = SubResource("CircleShape2D_3s14c")

[node name="Woosh_fire_sound" type="AudioStreamPlayer2D" parent="."]

[node name="Fireball_impact_sound" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="Fireball/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Fireball/Area2D" to="." method="_on_area_2d_body_exited"]
